fixed toList() for jenkins